k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hragent
  namespace: hragent
  labels:
    app: ai-hr-agent
spec:
  type: ClusterIP
  selector:
    app: ai-hr-agent
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
